--- a/App/PeaZip/res/lang/pl.txt
+++ b/App/PeaZip/res/lang/pl.txt
@@ -1,19 +1,19 @@
 ﻿=== PeaZip language file ===
 Polish - Polski
 6.3
-Translated by: Michał Trzebiatowski (2010, 2011), Mateusz Kacprzak <mateusz.kacprzak@yandex.ru> (2012 - 2016)
+Translated by: Michał Trzebiatowski (2010, 2011), Mateusz Kacprzak <mateusz.kacprzak@yandex.ru> (2012 - 2017)
 Last rev. by: Mateusz Kacprzak using PeTrA
-Last rev.: 2016.07.22
+Last rev.: 2017.01.02
 
 === PeaZip text group ===
 
-txt_6_3_autoadjust: Auto adjust columns
-txt_6_3_cinfo: Info and comments
-txt_6_3_syn: Synchronize archive with disk
-txt_6_3_uar: Update only files already in archive
-txt_6_2_encext: Add ".enc" suffix to encrypted archives
-txt_6_2_archive: Archive file type
-txt_6_2_container: Container file type
+txt_6_3_autoadjust: Automatycznie dopasuj kolumny
+txt_6_3_cinfo: Informacje i komentarze
+txt_6_3_syn: Synchronizuj archiwum z dyskiem
+txt_6_3_uar: Aktualizuj tylko pliki obecne w archiwum
+txt_6_2_encext: Dodaj przyrostek ".enc" do szyfrowanych archiwów
+txt_6_2_archive: Typ archiwum
+txt_6_2_container: Typ kontenera
 txt_6_1_ec: Rozwiń / zwiń drzewo archiwum
 txt_6_0_msq: Sortuj według typu dla kompresji "bryły" plików
 txt_5_9_lff: Analizuj pliki i katalogi
@@ -447,7 +447,7 @@ txt_about: O programie
 txt_action: Akcja
 txt_action_hint: Akcja przy otwieraniu lub podglądzie w skojarzonej aplikacji
 txt_add: Dodaj
-txt_add_existing_archive: dodaj (jeżeli archiwum istnieje)
+txt_add_existing_archive: Dodaj (jeżeli archiwum istnieje)
 txt_add_archive: Dodaj archiwum
 txt_add_files: Dodaj plik(i)
 txt_add_folder: Dodaj katalog
@@ -721,7 +721,7 @@ txt_list_na: niedostępne
 txt_name: Nazwa
 txt_naming: Zasady nadawania nazwy
 txt_unit_remote: Dysk sieciowy
-txt_newarchive: nowe archiwum
+txt_newarchive: Nowe archiwum
 txt_cnewfolder: Nowy katalog
 txt_news: Nowości
 txt_no: Nie
@@ -912,7 +912,7 @@ txt_units: jednostki
 txt_unit_unknown: Nieznany typ dysku
 txt_un7z_pw_untested: Nietestowane
 txt_up: Poziom w górę
-txt_update: aktualizuj (jeżeli archiwum istnieje)
+txt_update: Aktualizuj (jeżeli archiwum istnieje)
 txt_type_description_upx: UPX: kompresuje tylko pliki wykonywalne
 txt_advfilters: Użyj zaawansowanych filtrów
 txt_openfiles_hint: Użyj tej opcji do zawarcia w archiwum plików czytelnych dla innych aplikacji (przydatne w tworzeniu kopii zapasowych)
